// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Nudge Messages matches snapshot 1`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "isInvalidAssignmentDate": [Function],
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 18,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 2,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 36,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 3,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 68,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-07-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Andreanne",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Hauck",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "246c355d-80a8-4132-a57a-3d48dd86a5c5",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "available_points": undefined,
      "can_be_updated": true,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 33,
          "published_at": "2015-04-22T19:30:19.467Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span>",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that <span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span> expresses mathematically that no external force is acting on a body?",
                  "id": "1797",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 1\\">F_\\\\text{net} = 1</span>",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that <span data-math=\\"\\\\text{F}_\\\\text{net} = 1\\">\\\\text{F}_\\\\text{net} = 1</span> represents no external force is acting on a body? Doesn’t it tell that a unit force is acting in the positive direction?",
                  "id": "1796",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span>",
                  "correctness": "1.0",
                  "feedback_html": "Correct! <span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span> mathematically means that no external force is acting on a body.",
                  "id": "1795",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span>",
                  "correctness": "0.0",
                  "feedback_html": "Do you think <span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span> means that no external force is acting on a body? Doesn’t it tell that a unit force is acting in the negative direction?",
                  "id": "1794",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "496",
              "is_answer_order_important": false,
              "stem_html": "How do you express mathematically that no external force is acting on a body?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex033",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "tutor-only",
            },
            ExerciseTag {
              "raw": "dok1",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "33@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Introduction: Further Applications of Newton’s Laws",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "grader_comments": undefined,
      "grader_points": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "distributed: The Onset of Turbulence",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "completion_weight": undefined,
        "correctness_weight": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "late_work_penalty_applied": undefined,
        "late_work_penalty_per_period": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "motivating",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 2`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "isInvalidAssignmentDate": [Function],
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 18,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 2,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 36,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 3,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 68,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-07-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Andreanne",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Hauck",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "246c355d-80a8-4132-a57a-3d48dd86a5c5",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "available_points": undefined,
      "can_be_updated": true,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 33,
          "published_at": "2015-04-22T19:30:19.467Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span>",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that <span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span> expresses mathematically that no external force is acting on a body?",
                  "id": "1797",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 1\\">F_\\\\text{net} = 1</span>",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that <span data-math=\\"\\\\text{F}_\\\\text{net} = 1\\">\\\\text{F}_\\\\text{net} = 1</span> represents no external force is acting on a body? Doesn’t it tell that a unit force is acting in the positive direction?",
                  "id": "1796",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span>",
                  "correctness": "1.0",
                  "feedback_html": "Correct! <span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span> mathematically means that no external force is acting on a body.",
                  "id": "1795",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span>",
                  "correctness": "0.0",
                  "feedback_html": "Do you think <span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span> means that no external force is acting on a body? Doesn’t it tell that a unit force is acting in the negative direction?",
                  "id": "1794",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "496",
              "is_answer_order_important": false,
              "stem_html": "How do you express mathematically that no external force is acting on a body?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex033",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "tutor-only",
            },
            ExerciseTag {
              "raw": "dok1",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "33@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Introduction: Further Applications of Newton’s Laws",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "grader_comments": undefined,
      "grader_points": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "distributed: The Onset of Turbulence",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "completion_weight": undefined,
        "correctness_weight": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "late_work_penalty_applied": undefined,
        "late_work_penalty_per_period": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "motivating",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Take another chance",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 3`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "isInvalidAssignmentDate": [Function],
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 18,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 2,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 36,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 3,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 68,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-07-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Andreanne",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Hauck",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "246c355d-80a8-4132-a57a-3d48dd86a5c5",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "available_points": undefined,
      "can_be_updated": true,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 33,
          "published_at": "2015-04-22T19:30:19.467Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span>",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that <span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span> expresses mathematically that no external force is acting on a body?",
                  "id": "1797",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 1\\">F_\\\\text{net} = 1</span>",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that <span data-math=\\"\\\\text{F}_\\\\text{net} = 1\\">\\\\text{F}_\\\\text{net} = 1</span> represents no external force is acting on a body? Doesn’t it tell that a unit force is acting in the positive direction?",
                  "id": "1796",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span>",
                  "correctness": "1.0",
                  "feedback_html": "Correct! <span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span> mathematically means that no external force is acting on a body.",
                  "id": "1795",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span>",
                  "correctness": "0.0",
                  "feedback_html": "Do you think <span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span> means that no external force is acting on a body? Doesn’t it tell that a unit force is acting in the negative direction?",
                  "id": "1794",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "496",
              "is_answer_order_important": false,
              "stem_html": "How do you express mathematically that no external force is acting on a body?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex033",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "tutor-only",
            },
            ExerciseTag {
              "raw": "dok1",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "33@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Introduction: Further Applications of Newton’s Laws",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "grader_comments": undefined,
      "grader_points": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "distributed: The Onset of Turbulence",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "completion_weight": undefined,
        "correctness_weight": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "late_work_penalty_applied": undefined,
        "late_work_penalty_per_period": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "motivating",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Not sure? Here’s a hint",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 4`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "isInvalidAssignmentDate": [Function],
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 18,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 2,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 36,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 3,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 68,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-07-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Andreanne",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Hauck",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "246c355d-80a8-4132-a57a-3d48dd86a5c5",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "available_points": undefined,
      "can_be_updated": true,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 33,
          "published_at": "2015-04-22T19:30:19.467Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span>",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that <span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span> expresses mathematically that no external force is acting on a body?",
                  "id": "1797",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 1\\">F_\\\\text{net} = 1</span>",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that <span data-math=\\"\\\\text{F}_\\\\text{net} = 1\\">\\\\text{F}_\\\\text{net} = 1</span> represents no external force is acting on a body? Doesn’t it tell that a unit force is acting in the positive direction?",
                  "id": "1796",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span>",
                  "correctness": "1.0",
                  "feedback_html": "Correct! <span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span> mathematically means that no external force is acting on a body.",
                  "id": "1795",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span>",
                  "correctness": "0.0",
                  "feedback_html": "Do you think <span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span> means that no external force is acting on a body? Doesn’t it tell that a unit force is acting in the negative direction?",
                  "id": "1794",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "496",
              "is_answer_order_important": false,
              "stem_html": "How do you express mathematically that no external force is acting on a body?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex033",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "tutor-only",
            },
            ExerciseTag {
              "raw": "dok1",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "33@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Introduction: Further Applications of Newton’s Laws",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "grader_comments": undefined,
      "grader_points": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "distributed: The Onset of Turbulence",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "completion_weight": undefined,
        "correctness_weight": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "late_work_penalty_applied": undefined,
        "late_work_penalty_per_period": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "motivating",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Try again",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 5`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "isInvalidAssignmentDate": [Function],
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 18,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 2,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 36,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "42032",
          "enrollment_url": "http://localhost:3001/enroll/42032",
          "id": 3,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 68,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-07-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Andreanne",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Hauck",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "246c355d-80a8-4132-a57a-3d48dd86a5c5",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "available_points": undefined,
      "can_be_updated": true,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 33,
          "published_at": "2015-04-22T19:30:19.467Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span>",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that <span data-math=\\"F_\\\\text{net} = \\\\infty\\">F_\\\\text{net} = \\\\infty</span> expresses mathematically that no external force is acting on a body?",
                  "id": "1797",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 1\\">F_\\\\text{net} = 1</span>",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that <span data-math=\\"\\\\text{F}_\\\\text{net} = 1\\">\\\\text{F}_\\\\text{net} = 1</span> represents no external force is acting on a body? Doesn’t it tell that a unit force is acting in the positive direction?",
                  "id": "1796",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span>",
                  "correctness": "1.0",
                  "feedback_html": "Correct! <span data-math=\\"F_\\\\text{net} = 0\\">F_\\\\text{net} = 0</span> mathematically means that no external force is acting on a body.",
                  "id": "1795",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "<span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span>",
                  "correctness": "0.0",
                  "feedback_html": "Do you think <span data-math=\\"F_\\\\text{net} = {-1}\\">F_\\\\text{net} = {-1}</span> means that no external force is acting on a body? Doesn’t it tell that a unit force is acting in the negative direction?",
                  "id": "1794",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "496",
              "is_answer_order_important": false,
              "stem_html": "How do you express mathematically that no external force is acting on a body?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex033",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "tutor-only",
            },
            ExerciseTag {
              "raw": "dok1",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "33@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Introduction: Further Applications of Newton’s Laws",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "grader_comments": undefined,
      "grader_points": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "distributed: The Onset of Turbulence",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "completion_weight": undefined,
        "correctness_weight": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "late_work_penalty_applied": undefined,
        "late_work_penalty_per_period": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "motivating",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Give it another shot",
      },
      "validate": [MockFunction],
    }
  }
/>
`;
